fixed bugs in add.js

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -250,6 +250,19 @@
     </div>
     {{/each}}
     
+     <!-- <form id="addFriendForm" role="form" method="get" action="/add">
+	    <div class="form-group">
+	      	<label for="title">Title:</label>
+	      	<input type="text" class="form-control" id="title" placeholder="Title" name="title">
+	    </div>
+	    <div class="form-group">
+	      	<label for="content">Content:</label>
+	     	<input type="text" class="form-control" id="content" placeholder="Content" name="content">
+	    </div>
+	    <input type="submit" id="submitBtn" class="btn btn-default" value="Post"></input>
+	</form> -->
+
+
 	</div>
 
 
