added form to index.handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -250,7 +250,7 @@
     </div>
     {{/each}}
     
-     <!-- <form id="addFriendForm" role="form" method="get" action="/add">
+     <form id="addFriendForm" role="form" method="get" action="/add">
 	    <div class="form-group">
 	      	<label for="title">Title:</label>
 	      	<input type="text" class="form-control" id="title" placeholder="Title" name="title">
@@ -260,7 +260,7 @@
 	     	<input type="text" class="form-control" id="content" placeholder="Content" name="content">
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Post"></input>
-	</form> -->
+	</form>
 
 
 	</div>
