Make fav button empty by default

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -183,7 +183,7 @@
 
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 74 </button>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
-			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
+			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
 
 
 
@@ -234,7 +234,7 @@
 
     		<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 56 </button>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
-			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
+			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
 
   			</div>
 		</div>
