--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -219,7 +219,7 @@
 			<br/><br/>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 23 </button>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
-			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>  		
+			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>  
 
 			</div>
 		</div>
@@ -241,7 +241,7 @@
 			<br/><br/>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 12 </button>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
-			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
+			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
   			
   			</div>
 		</div>
