--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -240,31 +240,32 @@
 		</div>
 
 		{{#each posts}}
-	<div class="panel panel-default ">
-		<div class="panel-body">
- 			<div class="posts">
-        	<h3>{{title}}</h3>
-        	<p>{{content}}</p>
+		<div class="panel panel-default ">
+			<div class="panel-body">
+ 				<div class="posts">
+        		<h3>{{title}}</h3>
+        		<p>{{content}}</p>
+    			</div>
     		</div>
     	</div>
-    </div>
-    {{/each}}
-    
-     <form id="addFriendForm" role="form" method="get" action="/add">
-	    <div class="form-group">
-	      	<label for="title">Title:</label>
-	      	<input type="text" class="form-control" id="title" placeholder="Title" name="title">
-	    </div>
-	    <div class="form-group">
-	      	<label for="content">Content:</label>
-	     	<input type="text" class="form-control" id="content" placeholder="Content" name="content">
-	    </div>
-	    <input type="submit" id="submitBtn" class="btn btn-default" value="Post"></input>
-	</form>
-
-
+    	{{/each}}
+    	
+    	<div class="panel panel-default ">
+			<div class="panel-body">
+			    <form id="addFriendForm" role="form" method="get" action="/add">
+				    <div class="form-group">
+				    	<h3>Create New Post</h3>
+				    	<br/>
+				      	<label for="title">Title:</label>
+				      	<input type="text" class="form-control" id="title" placeholder="Title" name="title">
+				      	<label for="content">Content:</label>
+				     	<input type="text" class="form-control" id="content" placeholder="Content" name="content">
+				    </div>
+				    <input type="submit" id="submitBtn" class="btn btn-default" value="Post"></input>
+				</form>
+			</div>
+		</div>
 	</div>
-
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
