--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -19,6 +19,9 @@
 </head>
 
 <body>
-	<a href="/">Back </a>
+	<div class="container">
+	<br/>
+	<a href="/"><p>Back</p> </a>
+	</div>
 </body>
 </html>
