--- a/views/foodfinder.html
+++ b/views/foodfinder.html
@@ -173,6 +173,8 @@
 
 		<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d13402.617189694329!2d-117.23119452590333!3d32.880864988683385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smarkets!5e0!3m2!1sen!2sus!4v1423084181223" width="600" height="450" frameborder="0" style="border:0"></iframe>
 
+		<!-- <iframe src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCAoXsjsTgbqzLrJUTVX5UQntWrX6tnzNM&q=markets+ucsd"> </iframe> -->
+
 		</div>
 
 		<!-- PANEL -->
