--- a/views/foodfinder.html
+++ b/views/foodfinder.html
@@ -94,7 +94,7 @@
 	color: #eff2df;
 }
 
-@media (max-width: 767px) {
+@media (min-width: 800px) and (max-width: 1000px) {
 	.navbar-default .navbar-nav .open .dropdown-menu > li > a {
 		color: #eff2df;
 	}
@@ -108,7 +108,7 @@
 }
 
 	/* Responsive embed CSS for Google Maps */
-    .google-maps {
+/*    .google-maps {
         position: relative;
         padding-bottom: 75%; // This is the aspect ratio
         height: 0;
@@ -120,7 +120,34 @@
         left: 0;
         width: 100% !important;
         height: 100% !important;
-    }
+    }*/
+
+	/* Responsive embed CSS for Google Maps */
+	#mapContainer {
+	    height: 500px;
+	    width: 100%;
+	}
+
+	@media only screen and (min-width: 768px) and (max-width: 959px) {
+		#mapContainer {
+		    height: 500px;
+	    	width: 100%;
+		}
+	}	
+		
+	@media only screen and (max-width: 767px) {
+		#mapContainer {
+		    height: 260px;
+	    	width: 100%;
+		}
+	}	
+
+	@media only screen and (min-width: 480px) and (max-width: 767px) {
+		#mapContainer {
+		    height: 400px;
+	    	width: 100%;
+		}
+	}	
 
     </style>
 
@@ -168,14 +195,17 @@
 	</div>
 
 	<div class="container">
-		
+		<!-- 
 		<div class="google-maps">
 
 		<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d13402.617189694329!2d-117.23119452590333!3d32.880864988683385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smarkets!5e0!3m2!1sen!2sus!4v1423084181223" width="600" height="450" frameborder="0" style="border:0"></iframe>
 
-		<!-- <iframe src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCAoXsjsTgbqzLrJUTVX5UQntWrX6tnzNM&q=markets+ucsd"> </iframe> -->
+		<iframe src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCAoXsjsTgbqzLrJUTVX5UQntWrX6tnzNM&q=markets+ucsd"> </iframe>
 
-		</div>
+		</div> -->
+
+		<div id="mapContainer"></div>
+
 
 		<!-- PANEL -->
 		<div class="panel panel-default ">
@@ -218,15 +248,11 @@
     		<br/><br/>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 45 </button>
   			</div>
-
-
 		</div>
-
-		
-
-		
 	</div>
 
+	<!-- Include Google Maps API -->
+	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -235,6 +261,64 @@
 	<!-- The following two js are Lightbox jquery scripts -->
 	<script src="js/jquery-1.11.0.min.js"></script>
 	<script src="js/lightbox.min.js"></script>
+
+	<!-- Geolocation JS -->
+	<script type="text/javascript">
+		
+		function showMap() {
+		 
+			//If HTML5 Geolocation Is Supported In This Browser
+		    if (navigator.geolocation) {
+				    
+			    //Use HTML5 Geolocation API To Get Current Position
+		        navigator.geolocation.getCurrentPosition(function(position){
+			        
+			        //Get Latitude From Geolocation API
+			        var latitude = position.coords.latitude;
+			        
+			        //Get Longitude From Geolocation API
+			        var longitude = position.coords.longitude;
+			        
+			        //Define New Google Map With Lat / Lon
+			        var coords = new google.maps.LatLng(latitude, longitude);
+			        
+			        //Specify Google Map Options
+			        var mapOptions = {
+			            zoom: 15,
+			            center: coords,
+			            mapTypeControl: true,
+			            navigationControlOptions: {style: google.maps.NavigationControlStyle.SMALL}, mapTypeId: google.maps.MapTypeId.ROADMAP};
+			            map = new google.maps.Map(document.getElementById("mapContainer"), mapOptions);
+			            var marker = new google.maps.Marker({
+			                position: coords,
+			                map: map,
+			                title: "You Are Here!"
+			    		});
+					}
+				);
+		    }else {
+			    //Otherwise - Gracefully Fall Back If Not Supported... Probably Best Not To Use A JS Alert Though :)
+		        alert("Geolocation API is not supported in your browser.");
+		    }
+		}   
+	    
+		//Once Page Is Populated - Initiate jQuery
+		$(document).ready(function() {
+			
+		  //Show The Map
+		  showMap();
+		 
+		  // When The Viewing Window Is Resized
+		  $(window).resize(function() {
+			  
+			  //CSS Resizes Container So Lets Recall The Map Function
+			  showMap();
+			  
+		  });
+		 
+		});
+	        
+	</script>
 	
   </body>
 </html>
