Fix linking errors

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -119,8 +119,8 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"> <a href="index.handlebars" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
-					<li> <a href="foodfinder.html" > <span class="glyphicon glyphicon-cutlery"></span> Food Finder </a></li>
+					<li class="active"> <a href="index" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
+					<li> <a href="foodfinder" > <span class="glyphicon glyphicon-cutlery"></span> Food Finder </a></li>
 				</ul>
 
 				<form class="navbar-form navbar-left" role="search">
@@ -130,8 +130,8 @@
       			</form>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li> <a href="messages.html"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>	
-					<li> <a href="profile.html" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
+					<li> <a href="messages"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>	
+					<li> <a href="profile" ><span class="glyphicon glyphicon-user"></span> Profile </a></li>
 					<li> <a href="" > Log Out </a></li>
 				</ul>
 			</div>
