--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -169,7 +169,7 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li> <a href="index" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
+					<li> <a href="/" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
 					<li class="active"> <a href="foodfinder" > <span class="glyphicon glyphicon-cutlery"></span> Food Finder </a></li>
 				</ul>
 				
