--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -127,7 +127,7 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li> <a href="index" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
+					<li> <a href="/" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
 					<li> <a href="foodfinder" > <span class="glyphicon glyphicon-cutlery"></span> Food Finder </a></li>
 				</ul>
 				
@@ -156,7 +156,7 @@
 
 		<div class="jumbotron">
 
- 		 <h1><img src="../public/images/profile-icon.png" height="60" width="60"> Jane Doe</h1>
+ 		 <h1><img src="images/profile-icon.png" height="60" width="60"> Jane Doe</h1>
  		 <br/>
  		 <p>Location: La Jolla, CA</p>
  		 <p>Diet: Gluten-free, Vegetarian</p>
