--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -130,7 +130,7 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li > <a href="/"> <span class="glyphicon glyphicon-home"></span>  Home </a></li>
+					<li > <a href="index"> <span class="glyphicon glyphicon-home"></span>  Home </a></li>
 					<li> <a href="foodfinder" > <span class="glyphicon glyphicon-cutlery"></span> Food Finder </a></li>
 				</ul>
 
