Add id upvote to thumbs up and remove photos button

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -170,9 +170,9 @@
   			<div class="btn-group" role="group">
     			<button type="button" class="btn btn-default btn-success selectButton">My Posts</button>
   			</div>
-  			<div class="btn-group" role="group">
+  			<!-- <div class="btn-group" role="group">
     			<button type="button" class="btn btn-default selectButton">Photos</button>
-  			</div>
+  			</div> -->
   			<div class="btn-group" role="group">
     			<button type="button" class="btn btn-default selectButton">Favorites</button>
   			</div>
@@ -195,7 +195,7 @@
 
 			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
 			<br/><br/>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 11 </button>
+			<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 11 </button>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
 			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star"></span></button>
 
@@ -217,7 +217,7 @@
 
 			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
 			<br/><br/>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 23 </button>
+			<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 23 </button>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
 			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>  
 
@@ -239,7 +239,7 @@
 
 			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
 			<br/><br/>
-			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 12 </button>
+			<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 12 </button>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
 			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
   			
