Attempt upvote functionality

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -246,7 +246,7 @@
         		<h3>{{title}}</h3>
         		<p>{{content}}</p>
         		<br/>
-        		<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
+        		<button type="button" class="btn btn-default upvote"><span class="glyphicon glyphicon-thumbs-up"></span>{{upvotes}}</button>
     			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
     			</div>
     		</div>
@@ -279,6 +279,7 @@
 	<!-- The following two js are Lightbox jquery scripts -->
 	<script src="js/jquery-1.11.0.min.js"></script>
 	<script src="js/lightbox.min.js"></script>
+	<script src="js/nutriton.js"></script>
 	
   </body>
 </html>
