--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -192,6 +192,8 @@
 	<!-- The following two js are Lightbox jquery scripts -->
 	<script src="js/jquery-1.11.0.min.js"></script>
 	<script src="js/lightbox.min.js"></script>
+	<script src="js/nutriton.js"></script>
+
 	
   </body>
 </html>
