--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -255,6 +255,7 @@
 	<!-- The following two js are Lightbox jquery scripts -->
 	<script src="js/jquery-1.11.0.min.js"></script>
 	<script src="js/lightbox.min.js"></script>
+	<script src="js/nutriton.js"></script>
 	
   </body>
 </html>
