Load js script nutriton to handlebars

--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -261,6 +261,7 @@
 	<!-- The following two js are Lightbox jquery scripts -->
 	<script src="js/jquery-1.11.0.min.js"></script>
 	<script src="js/lightbox.min.js"></script>
+	<script src="js/nutriton.js"></script>
 
 	<!-- Geolocation JS -->
 	<script type="text/javascript">
