Change index to / in index.handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -119,7 +119,7 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"> <a href="index" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
+					<li class="active"> <a href="/" > <span class="glyphicon glyphicon-home"></span>  Home </a></li>
 					<li> <a href="foodfinder" > <span class="glyphicon glyphicon-cutlery"></span> Food Finder </a></li>
 				</ul>
 
