Added new menu functionality for Food Finder

--- a/views/addcanyonvista.handlebars
+++ b/views/addcanyonvista.handlebars
@@ -21,7 +21,7 @@
 <body>
 	<div class="container">
 	<br/>
-	<a href="/"><p>Back</p> </a>
+	<a href="foodfinder"><p>Back to Food Finder</p> </a>
 	</div>
 </body>
 </html>
