--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -152,7 +152,7 @@
  		-->
 
 		<!-- PANEL -->
-		<div class="panel panel-default ">
+	<!-- 	<div class="panel panel-default ">
 
  			<div class="panel-body">
  				<h3 >The Best Vegan Restaurants of 2014 in San Diego<br/><br/></h3>
@@ -187,7 +187,7 @@
 			
   			</div>
 		</div>
-
+ -->
 
 		{{#each posts}}
 		<div class="panel panel-default ">
