--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -252,7 +252,7 @@
   			<div class="panel-body">
   				<h3 id="canyon-vista-toggle">Canyon Vista <span class="glyphicon glyphicon-chevron-down"></span></h3>
 
-	  			<div class="canyon-vista" style="display:none;">
+	  			<!-- <div class="canyon-vista" style="display:none;"> -->
 	  			
 		  			{{#each canyonvistamenu}}
 		 			<div class="canyonvistamenu">
@@ -267,15 +267,15 @@
 					    <div class="form-group">
 					    	<br/>
 					    	<h4>Add Menu</h4>
-					      	<label for="title">Name:</label>
+					      	<label for="name">Name:</label>
 					      	<input type="text" class="form-control" id="name" placeholder="Name" name="name">
-					      	<label for="content">Type:</label>
+					      	<label for="type">Type:</label>
 					     	<input type="text" class="form-control" id="type" placeholder="Type" name="type">
 					    </div>
 					    <input type="submit" id="submitBtn" class="btn btn-default" value="Post"></input>
 					</form>
 
-	    		</div>
+	    		<!-- </div> -->
 
   			</div>
 		</div>
