Implement upvote and downvote

--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -220,7 +220,7 @@
     		Vegatarian Items: Example, Abcd, Efgh
     		
     		<br/><br/>
-			<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 121 </button>
+			<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 121 </button>
   			</div>
 
   			<div class="panel-body">
@@ -233,7 +233,7 @@
     		Vegatarian Items: Lightlife, Nate's, Etc
     		
     		<br/><br/>
-			<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 36 </button>
+			<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 36 </button>
   			</div>
 
   			<div class="panel-body">
@@ -246,7 +246,7 @@
     		Vegatarian Menu: Sweet Potato Fries, Fern Creek Smoothies
     		
     		<br/><br/>
-			<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 45 </button>
+			<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 45 </button>
   			</div>
 		</div>
 	</div>
