--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -181,7 +181,7 @@
     		
     		<br/><br/>
 
-			<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 74 </button>
+			<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 74 </button>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
 			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
 
@@ -232,7 +232,7 @@
 
     			<br/><br/>
 
-    		<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 56 </button>
+    		<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 56 </button>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
 			<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
 
@@ -246,8 +246,8 @@
         		<h3>{{title}}</h3>
         		<p>{{content}}</p>
         		<br/>
-        		<button type="button" class="btn btn-default upvote"><span class="glyphicon glyphicon-thumbs-up"></span>{{upvotes}}</button>
-    			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
+        		<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span>{{upvotes}}</button>
+    			<button type="button" class="downvote btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
     			</div>
     		</div>
     	</div>
