--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -253,13 +253,12 @@
   				<h3 id="canyon-vista-toggle">Canyon Vista <span class="glyphicon glyphicon-chevron-down"></span></h3>
 
 	  			<!-- <div class="canyon-vista" style="display:none;"> -->
-	  			
+
 		  			{{#each canyonvistamenu}}
-		 			<div class="canyonvistamenu">
-		        		<h4>{{name}} &nbsp; TESTING TESTING {{type}}
-		        		<button type="button" class="btn btn-default upvote pull-right"><span class="glyphicon glyphicon-thumbs-up"></span>{{upvotes}}</button>
+		 			<div class="canyonvistamenus">
+		        		<h4>{{name}} &nbsp; TESTING TESTING {{type}}</h4>
+		        		<button type="button" class="btn btn-default upvote pull-right"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
 		    			<button type="button" class="btn btn-default downvote pull-right"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
-		    			</h4>
 		    		</div>
 		    		{{/each}}
 
