--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -256,9 +256,10 @@
 
 		  			{{#each canyonvistamenu}}
 		 			<div class="canyonvistamenus">
-		        		<h4>{{name}} &nbsp; TESTING TESTING {{type}}</h4>
+		        		<h4>{{name}} &nbsp; TESTING TESTING {{type}}
 		        		<button type="button" class="btn btn-default upvote pull-right"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
 		    			<button type="button" class="btn btn-default downvote pull-right"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
+		    			</h4>
 		    		</div>
 		    		{{/each}}
 
