Renamed json files and edited js

--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -254,9 +254,9 @@
 
 	  			<!-- <div class="canyon-vista" style="display:none;"> -->
 
-		  			{{#each canyonvistamenu}}
-		 			<div class="canyonvistamenus">
-		        		<h4>{{name}} &nbsp; TESTING TESTING {{type}}
+		  			{{#each canyonvistaposts}}
+		 			<div class="canyonvistaposts">
+		        		<h4>{{name}} &nbsp;  {{type}}
 		        		<button type="button" class="btn btn-default upvote pull-right"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
 		    			<button type="button" class="btn btn-default downvote pull-right"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
 		    			</h4>
