fix server issue

--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -254,7 +254,7 @@
 
 	  			<!-- <div class="canyon-vista" style="display:none;"> -->
 
-		  			{{#each canyonvistaposts}}
+		  			{{#each canyonData.canyonvistaposts}}
 		 			<div class="canyonvistaposts">
 		        		<h4>{{name}} &nbsp;  {{type}}
 		        		<button type="button" class="btn btn-default upvote pull-right"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
