--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -247,7 +247,7 @@
         		<br/>
         		<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
     			<button type="button" class="downvote btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
-
+				<button type="button" class="btn btn-default pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
     			</div>
     		</div>
     	</div>
