--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -268,10 +268,38 @@
 					    </div>
 					    <input type="submit" id="submitBtn" class="btn btn-default" value="Post"></input>
 					</form>
-
 	    		<!-- </div> -->
-
   			</div>
+
+			<div class="panel-body">
+  				<h3 id="Pines-toggle">Pines <span class="glyphicon glyphicon-chevron-down"></span></h3>
+
+	  			<!-- <div class="pines" style="display:none;"> -->
+
+		  			{{#each pinesData.pinesposts}}
+		 			<div class="pinesposts">
+		        		<h4>{{name}} &nbsp; ({{type}})
+		    			<button type="button" class="btn btn-default downvote pull-right"><span class="glyphicon glyphicon-thumbs-down"></span> {{downvotes}}</button>
+		    			<button type="button" class="btn btn-default upvote pull-right"><span class="glyphicon glyphicon-thumbs-up"></span> {{upvotes}}</button>
+		    			</h4>
+		    		</div>
+		    		{{/each}}
+
+				    <form id="addPinesForm" role="form" method="get" action="/addpines">
+					    <h4>Add Menu</h4>
+					    <div class="form-group form-inline">
+					      	<label for="name">Name:</label>
+					      	<input type="text" class="form-control" id="name" placeholder="e.g. fish" name="name">
+					    </div>
+					    <div class="form-group form-inline">
+					    <label for="type">Type:</label>
+					     	<input type="text" class="form-control" id="type" placeholder="e.g. Gluten-free" name="type">
+					    </div>
+					    <input type="submit" id="submitBtn" class="btn btn-default" value="Post"></input>
+					</form>
+	    		<!-- </div> -->
+  			</div>
+
 		</div>
 	</div>
 
