--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -131,11 +131,11 @@
 					<li> <a href="foodfinder" > <span class="glyphicon glyphicon-cutlery"></span> Food Finder </a></li>
 				</ul>
 				
-				<form class="navbar-form navbar-left" role="search">
+				<!-- <form class="navbar-form navbar-left" role="search">
         			<div class="form-group">
           				<input type="text" class="form-control" placeholder="Search">
         			</div>
-      			</form>
+      			</form> -->
 
 				<ul class="nav navbar-nav navbar-right">
 					<li> <a href="messages"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>
