Added strong to Add Menu option

--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -257,7 +257,7 @@
 		    		{{/each}}
 
 				    <form id="addCanyonVistaForm" role="form" method="get" action="/addcanyonvista">
-					    <h4>Add Menu</h4>
+					    <h4><strong>Add Menu</strong></h4>
 					    <div class="form-group form-inline">
 					      	<label for="name">Name:</label>
 					      	<input type="text" class="form-control" id="name" placeholder="e.g. fish" name="name">
@@ -286,7 +286,7 @@
 		    		{{/each}}
 
 				    <form id="addPinesForm" role="form" method="get" action="/addpines">
-					    <h4>Add Menu</h4>
+					    <h4><strong>Add Menu</strong></h4>
 					    <div class="form-group form-inline">
 					      	<label for="name">Name:</label>
 					      	<input type="text" class="form-control" id="name" placeholder="e.g. fish" name="name">
@@ -315,7 +315,7 @@
 		    		{{/each}}
 
 				    <form id="addRootsForm" role="form" method="get" action="/addroots">
-					    <h4>Add Menu</h4>
+					    <h4><strong>Add Menu</strong></h4>
 					    <div class="form-group form-inline">
 					      	<label for="name">Name:</label>
 					      	<input type="text" class="form-control" id="name" placeholder="e.g. fish" name="name">
