Edit latin to other, minus last post on index.

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -185,16 +185,22 @@
 
  			<div class="panel-body">
 
-			<strong>My Favourite Vegetarian Smoothies</strong>
+			<strong>My Favourite Vegetarian Smoothie</strong>
+			
+			<div class="col-xs-5 col-md-2">
+			<a href="http://thesmoothielover.com/wp-content/uploads/2012/05/DSC04605.jpg" data-lightbox="smoothie" class="thumbnail">
+		    	<img src="http://thesmoothielover.com/wp-content/uploads/2012/05/DSC04605.jpg"/>
+		    </a>
+			</div>
+
 			<br/>
 			<br/>
 
-    		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
+    		<p>Smoothies are quick and easy to make. With a blender, you just need to experiment with different fruits and vegetables. I find it better to mix even proportions of dairy, fruits, and ice to make a perfect smoothie. You can even add seeds and nuts without changing the texture of the drink.</p>
 
-			Itaque haec cum illis est dissensio, cum Peripateticis nulla sane. Rationis enim perfectio est virtus; Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit. Et quidem, inquit, vehementer errat; Quid ait Aristoteles reliquique Platonis alumni?
+    		<p>One of my favorite smoothies is the banana berry smoothie. You only need about 250g of berries, one banana, 2 cups of milk, and some ice cubes. Blend them together, and serve! It's simple to make, with only three ingredients, and delicious.</p>
 
-			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
-			<br/><br/>
+			<br/>
 			<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 11 </button>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
 			<button type="button" class="btn btn-default favorite pull-right"><span class="glyphicon glyphicon-star-empty"></span></button>
@@ -208,14 +214,17 @@
  			<div class="panel-body">
 
 			<strong>How To Make A Delicious Vegetarian Snack in 15 Minutes</strong>
+			
+			<div class="col-xs-5 col-md-2">
+			<a href="http://cdn.sheknows.com/articles/2011/12/cucumber-dill-cracker.jpg" data-lightbox="snack" class="thumbnail">
+		    	<img src="http://cdn.sheknows.com/articles/2011/12/cucumber-dill-cracker.jpg"/>
+		    </a>
+			</div>
+
 			<br/>
 			<br/>
+    		<p>You can make cucumber dill crackers for a quick snack, fancy enough to impress others, and delicious. Mix 8 ounces of softened cream cheese with 1 cup of italian dressing. Spread the mix on crackers, and then top with cucumbers and dill. Serve immediately!</p>
 
-    		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
-
-			Itaque haec cum illis est dissensio, cum Peripateticis nulla sane. Rationis enim perfectio est virtus; Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit. Et quidem, inquit, vehementer errat; Quid ait Aristoteles reliquique Platonis alumni?
-
-			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
 			<br/><br/>
 			<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 23 </button>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
@@ -230,14 +239,18 @@
  			<div class="panel-body">
 
 			<strong>Best Vegetarian Burger Restaurants</strong>
+
 			<br/>
 			<br/>
 
-    		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
+    		<ol>
+    			<li><em>Burger on Smith</em> - Their signature Nutty Professor burger is a combination of nut, veggies, and quinoa, topped with an oven-roasted tomato, avacado, and creamy herb sauce. It's perfect to savor.</li> <br/>
+    			<li><em>Native Foods</em> - The "bacon" burger for the vegetarian. Made of thinly sliced seitan, melted vegan cheddar, caramelized onions, romaine, carrots, tomato, and "bacon," smothered in barbecue sauce and ranch dressing. Topped off with battered pickle chips.</li><br/>
+    			<li><em>26 Beach</em> - Made with a brown rice base, black beans, corn, nuts, carrots, lentils, and soy, with a nice sear from the grill, there is plenty of flavor to experience. Tomatoes add a nice acidity, and melted cheese rounds finish it off.</li><br/>
+    			<li><em>The Plant</em> - Their Wasabi Plant Burger sure is unique, made with lentils, cashews, bulgar wheat, and veggies, topped with sauerkraut, raspberry aoli, and wasabi. On the side, the restaurant serves herb-roasted potatoes with mixed greens and vegetables.</li><br/>
+    			<li><em>Umami Burger</em> - The patty is comprised of a mushroom blend and plenty of edamame, colored with beet juice to give it a medium-rare burger appearance. Under the patty is the lettuce and a roasted tomato, while the top is covered with sauteed onions and ricotta. The "umami" comes from the finishing touch, and that is a strong splash of truffle oil.</li>
+    		</ol>
 
-			Itaque haec cum illis est dissensio, cum Peripateticis nulla sane. Rationis enim perfectio est virtus; Et quidem saepe quaerimus verbum Latinum par Graeco et quod idem valeat; Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit. Et quidem, inquit, vehementer errat; Quid ait Aristoteles reliquique Platonis alumni?
-
-			Cur, nisi quod turpis oratio est? Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Si longus, levis dictata sunt. Aut unde est hoc contritum vetustate proverbium: quicum in tenebris? Quos quidem tibi studiose et diligenter tractandos magnopere censeo.
 			<br/><br/>
 			<button type="button" class="upvote btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 12 </button>
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-comment"></span>  View Comments</button>
